--- a/assets/main.scss
+++ b/assets/main.scss
@@ -65,7 +65,7 @@ main.page-content .wrapper {
 }
 
 @media all and (max-width:768px){
-  .nav {display: none;}
+  #navigation {display: none;}
 }
 
 .nav a {
@@ -96,7 +96,32 @@ main.page-content .wrapper {
   margin-left: 0px;
 }
 
+#fullscreen-navigation {
+  position: fixed;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: none;
+  justify-center: center;
+  background: #fff;
+  top:0px;
+}
+
+#fullscreen-navigation .nav {
+  top: 50%;
+}
+
 .menu {
+  right: 10px;
+  top: 10px;
+  position: fixed;
+  z-index: 100;
+  display: none;
+  cursor: pointer;
+}
+
+.close {
   right: 10px;
   top: 10px;
   position: fixed;
@@ -141,8 +166,20 @@ main.page-content .wrapper {
 
 .post-image {
   width: 100%;
-  height: 200px;
+  height: 10rem;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
+}
+
+@media all and (min-width:768px){
+  .post-image {
+    height: 14rem;
+  }
+}
+
+@media all and (min-width:1024px){
+  .post-image {
+    height: 18rem;
+  }
 }
